library/src/libqtreeview.h

typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QEvent QEvent;
typedef struct QHeaderView QHeaderView;
typedef struct QItemSelection QItemSelection;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QTimerEvent QTimerEvent;
typedef struct QTreeView QTreeView;
typedef struct QWidget QWidget;
QTreeView* QTreeView_new(QWidget* parent);
QTreeView* QTreeView_new2();
QMetaObject* QTreeView_MetaObject(const QTreeView* self);
void* QTreeView_Metacast(QTreeView* self, const char* param1);
int QTreeView_Metacall(QTreeView* self, int param1, int param2, void** param3);
libqt_string QTreeView_Tr(const char* s);
void QTreeView_SetModel(QTreeView* self, QAbstractItemModel* model);
void QTreeView_SetRootIndex(QTreeView* self, QModelIndex* index);
void QTreeView_SetSelectionModel(QTreeView* self, QItemSelectionModel* selectionModel);
QHeaderView* QTreeView_Header(const QTreeView* self);
void QTreeView_SetHeader(QTreeView* self, QHeaderView* header);
int QTreeView_AutoExpandDelay(const QTreeView* self);
void QTreeView_SetAutoExpandDelay(QTreeView* self, int delay);
int QTreeView_Indentation(const QTreeView* self);
void QTreeView_SetIndentation(QTreeView* self, int i);
void QTreeView_ResetIndentation(QTreeView* self);
bool QTreeView_RootIsDecorated(const QTreeView* self);
void QTreeView_SetRootIsDecorated(QTreeView* self, bool show);
bool QTreeView_UniformRowHeights(const QTreeView* self);
void QTreeView_SetUniformRowHeights(QTreeView* self, bool uniform);
bool QTreeView_ItemsExpandable(const QTreeView* self);
void QTreeView_SetItemsExpandable(QTreeView* self, bool enable);
bool QTreeView_ExpandsOnDoubleClick(const QTreeView* self);
void QTreeView_SetExpandsOnDoubleClick(QTreeView* self, bool enable);
int QTreeView_ColumnViewportPosition(const QTreeView* self, int column);
int QTreeView_ColumnWidth(const QTreeView* self, int column);
void QTreeView_SetColumnWidth(QTreeView* self, int column, int width);
int QTreeView_ColumnAt(const QTreeView* self, int x);
bool QTreeView_IsColumnHidden(const QTreeView* self, int column);
void QTreeView_SetColumnHidden(QTreeView* self, int column, bool hide);
bool QTreeView_IsHeaderHidden(const QTreeView* self);
void QTreeView_SetHeaderHidden(QTreeView* self, bool hide);
bool QTreeView_IsRowHidden(const QTreeView* self, int row, QModelIndex* parent);
void QTreeView_SetRowHidden(QTreeView* self, int row, QModelIndex* parent, bool hide);
bool QTreeView_IsFirstColumnSpanned(const QTreeView* self, int row, QModelIndex* parent);
void QTreeView_SetFirstColumnSpanned(QTreeView* self, int row, QModelIndex* parent, bool span);
bool QTreeView_IsExpanded(const QTreeView* self, QModelIndex* index);
void QTreeView_SetExpanded(QTreeView* self, QModelIndex* index, bool expand);
void QTreeView_SetSortingEnabled(QTreeView* self, bool enable);
bool QTreeView_IsSortingEnabled(const QTreeView* self);
void QTreeView_SetAnimated(QTreeView* self, bool enable);
bool QTreeView_IsAnimated(const QTreeView* self);
void QTreeView_SetAllColumnsShowFocus(QTreeView* self, bool enable);
bool QTreeView_AllColumnsShowFocus(const QTreeView* self);
void QTreeView_SetWordWrap(QTreeView* self, bool on);
bool QTreeView_WordWrap(const QTreeView* self);
void QTreeView_SetTreePosition(QTreeView* self, int logicalIndex);
int QTreeView_TreePosition(const QTreeView* self);
void QTreeView_KeyboardSearch(QTreeView* self, libqt_string search);
QRect* QTreeView_VisualRect(const QTreeView* self, QModelIndex* index);
void QTreeView_ScrollTo(QTreeView* self, QModelIndex* index, int hint);
QModelIndex* QTreeView_IndexAt(const QTreeView* self, QPoint* p);
QModelIndex* QTreeView_IndexAbove(const QTreeView* self, QModelIndex* index);
QModelIndex* QTreeView_IndexBelow(const QTreeView* self, QModelIndex* index);
void QTreeView_DoItemsLayout(QTreeView* self);
void QTreeView_Reset(QTreeView* self);
void QTreeView_DataChanged(QTreeView* self, QModelIndex* topLeft, QModelIndex* bottomRight, libqt_list /* of int */ roles);
void QTreeView_SelectAll(QTreeView* self);
void QTreeView_Expanded(QTreeView* self, QModelIndex* index);
void QTreeView_Collapsed(QTreeView* self, QModelIndex* index);
void QTreeView_HideColumn(QTreeView* self, int column);
void QTreeView_ShowColumn(QTreeView* self, int column);
void QTreeView_Expand(QTreeView* self, QModelIndex* index);
void QTreeView_Collapse(QTreeView* self, QModelIndex* index);
void QTreeView_ResizeColumnToContents(QTreeView* self, int column);
void QTreeView_SortByColumn(QTreeView* self, int column, int order);
void QTreeView_ExpandAll(QTreeView* self);
void QTreeView_ExpandRecursively(QTreeView* self, QModelIndex* index);
void QTreeView_CollapseAll(QTreeView* self);
void QTreeView_ExpandToDepth(QTreeView* self, int depth);
void QTreeView_VerticalScrollbarValueChanged(QTreeView* self, int value);
void QTreeView_ScrollContentsBy(QTreeView* self, int dx, int dy);
void QTreeView_RowsInserted(QTreeView* self, QModelIndex* parent, int start, int end);
void QTreeView_RowsAboutToBeRemoved(QTreeView* self, QModelIndex* parent, int start, int end);
QModelIndex* QTreeView_MoveCursor(QTreeView* self, int cursorAction, int modifiers);
int QTreeView_HorizontalOffset(const QTreeView* self);
int QTreeView_VerticalOffset(const QTreeView* self);
void QTreeView_SetSelection(QTreeView* self, QRect* rect, int command);
QRegion* QTreeView_VisualRegionForSelection(const QTreeView* self, QItemSelection* selection);
libqt_list /* of QModelIndex* */ QTreeView_SelectedIndexes(const QTreeView* self);
void QTreeView_ChangeEvent(QTreeView* self, QEvent* event);
void QTreeView_TimerEvent(QTreeView* self, QTimerEvent* event);
void QTreeView_PaintEvent(QTreeView* self, QPaintEvent* event);
void QTreeView_DrawRow(const QTreeView* self, QPainter* painter, QStyleOptionViewItem* options, QModelIndex* index);
void QTreeView_DrawBranches(const QTreeView* self, QPainter* painter, QRect* rect, QModelIndex* index);
void QTreeView_MousePressEvent(QTreeView* self, QMouseEvent* event);
void QTreeView_MouseReleaseEvent(QTreeView* self, QMouseEvent* event);
void QTreeView_MouseDoubleClickEvent(QTreeView* self, QMouseEvent* event);
void QTreeView_MouseMoveEvent(QTreeView* self, QMouseEvent* event);
void QTreeView_KeyPressEvent(QTreeView* self, QKeyEvent* event);
void QTreeView_DragMoveEvent(QTreeView* self, QDragMoveEvent* event);
bool QTreeView_ViewportEvent(QTreeView* self, QEvent* event);
void QTreeView_ColumnResized(QTreeView* self, int column, int oldSize, int newSize);
void QTreeView_ColumnCountChanged(QTreeView* self, int oldCount, int newCount);
void QTreeView_ColumnMoved(QTreeView* self);
void QTreeView_Reexpand(QTreeView* self);
void QTreeView_RowsRemoved(QTreeView* self, QModelIndex* parent, int first, int last);
void QTreeView_DrawTree(const QTreeView* self, QPainter* painter, QRegion* region);